Common utilities code

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,15 @@ scikit-learn
 catboost
 xgboost
 Flask
+Flask-Cors
+mlflow==2.2.2
+dvc
+gdown
+ensure==1.0.2
+notebook
+python-dotenv
+tqdm
+joblib
+types-PyYAML
+scipy
 -e .
