--- a/config/config.yaml
+++ b/config/config.yaml
@@ -3,7 +3,32 @@ artifacts_root: artifacts
 
 ### Data Ingestion Configurations ( Not used in current version )
 data_ingestion:
-  root_dir: artifacts/data_ingestion
+  root_dir: artifacts/data
   source_URL: https://drive.google.com/file/d/1vlhZ5c7abUKF8xXERIw6m9Te8fW7ohw3/view?usp=sharing
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+
+  ## Data Transformation Configurations
+data_transformation:
+  root_dir: artifacts/data
+  transformed_data_file: artifacts/data/transformed_data.csv
+  source_data_file: artifacts/data/Solar_Footprints.csv
+  selected_columns:
+    [
+      'Acres',
+      'Distance to Substation (Miles) CAISO',
+      'Distance to Substation (Miles) GTET 100 Max Voltage',
+      'Distance to Substation (Miles) GTET 200 Max Voltage',
+      'Shape__Length',
+      'Shape__Area', 
+      'Percentile (GTET 100 Max Voltage)',
+      'Percentile (GTET 200 Max Voltage)',
+      'Percentile (CAISO)',
+      'Install Type',
+      'Urban or Rural',
+      'Region',
+      'Solar Technoeconomic Intersection'
+    ]
+
+  ## Model Trainer Configurations
