--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,15 @@ numpy
 seaborn
 matplotlib
 scikit-learn
-catboost
+python-box
+# catboost
 xgboost
-Flask
-Flask-Cors
-mlflow==2.2.2
+# Flask
+# Flask-Cors
+# mlflow==2.2.2
 dvc
 # gdown
-ensure==1.0.2
+# ensure==1.0.2
 notebook
 python-dotenv
 tqdm
